# sync-var

./: .gitignore  CHANGELOG.md  README.md  mise.toml  pyproject.toml  release-please-config.json
.github/: renovate.json5
.github/workflows/: ci.yaml  release-please.yaml
docs/: architecture.md  concepts.md
src/sync_var/: __init__.py  cli.py  config.py  error.py  logging.py  parse_master_var.py  parse_target_var.py  replace.py  save.py  spinner.py  utils.py
src/sync_var/tests/: test_config.py
